--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<script src="js/card.js"></script>
 	</head>
 	<body>
-		<div class="container" id="container">
+		<div class="container text-center" id="container">
 			<h1>Pokemon Pictures</h1>
 			<script>
 				for (var i = 0; i < 807; i++) {
