--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!--Developer script-->
 	</head>
 	<body>
-		<div class="container" id="container">
+		<div class="container text-center" id="container">
 			<h1>Pokemon Pictures</h1>
 			<p>Click on an image to download it.</p>
 			<a href="1.png" download><img src="1.png" style="width: 100px; height: 100px;"></a>
