--- a/index.html
+++ b/index.html
@@ -831,6 +831,8 @@
 			<a href="805.png" download><img src="805.png"></a>
 			<a href="806.png" download><img src="806.png"></a>
 			<a href="807.png" download><img src="807.png"></a>
+			<a href="808.png" download><img src="808.png"></a>
+			<a href="809.png" download><img src="809.png"></a>
 		</div>
 	</body>
 </html>
